--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=abanes_dev
-MAX_CONNECTION_POOL_SIZE=5
+DATABASE_URL=postgressql://postgres:postgres@localhost:5432/abanes_dev
