--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.2.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.2",
     "fastify": "^5.2.0",
     "fastify-type-provider-zod": "^4.0.2",
+    "pg": "^8.13.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
