--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgressql://postgres:postgres@localhost:5432/abanes_dev
+DATABASE_URL_TEST=postgressql://postgres_test:postgres_test@localhost:5433/abanes_test
