--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  postgres-test:
+    image: postgres:16
+    container_name: postgres_container_test
+    restart: always
+    environment:
+      POSTGRES_USER: postgres_test
+      POSTGRES_PASSWORD: postgres_test
+      POSTGRES_DB: abanes_test
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data_test:/var/lib/postgresql/data
+
   redis:
     image: redis:7
     container_name: redis_container
@@ -22,5 +35,6 @@ services:
       - redis_data:/data
 
 volumes:
+  postgres_data_test:
   postgres_data:
   redis_data:
