--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/server.ts",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "test": "NODE_ENV=test drizzle-kit push && vitest --config vitest.config.mts --run"
+    "test": "NODE_ENV=test drizzle-kit push && vitest --config vitest.config.mts --run --no-file-parallelism"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
