add Redis integration for caching states in API routes and update environment configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgressql://postgres:postgres@localhost:5432/abanes_dev
 DATABASE_URL_TEST=postgressql://postgres_test:postgres_test@localhost:5433/abanes_test
+REDIS_URL=redis://localhost:6379/0
