--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "test": "NODE_ENV=test drizzle-kit push && vitest --config vitest.config.mts --run --no-file-parallelism"
   },
   "dependencies": {
+    "@bull-board/api": "^6.5.3",
+    "@bull-board/fastify": "^6.5.3",
     "@fastify/cors": "^10.0.1",
     "@fastify/redis": "^7.0.1",
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.2.0",
+    "bullmq": "^5.34.4",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.2",
     "fastify": "^5.2.0",
