--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bull-board/api": "^6.5.3",
     "@bull-board/fastify": "^6.5.3",
+    "@fastify/basic-auth": "^6.0.2",
     "@fastify/cors": "^10.0.1",
     "@fastify/redis": "^7.0.1",
     "@fastify/swagger": "^9.4.0",
